--- a/src/store-manager/store-manager.scss
+++ b/src/store-manager/store-manager.scss
@@ -18,7 +18,7 @@
     .store-status-info {
       padding-left: 12px;
       font-size: 12px;
-      font-family: "Lucida Console", Monaco, monospace;
+      font-family: 'Lucida Console', Monaco, monospace;
       text-align: left;
       .label {
         margin-right: 5px;
@@ -37,12 +37,12 @@
     }
   }
 
-  .store-manager-actions-container{
+  .store-manager-actions-container {
     height: 35px;
     position: relative;
-    .bulk-insert-progress-container {
+    text-align: center;
 
-    }
+     
   }
 
   .store-manager-separator {
