--- a/src/store-manager/store-manager.scss
+++ b/src/store-manager/store-manager.scss
@@ -1,7 +1,16 @@
 .store-manager {
-  background-color: honeydew;
+  background-color: lightgrey;
   width: 250px;
   margin: 2px 2px;
+  position: relative;
+
+  .waiting {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(66, 91, 116, 0.842);
+  }
 
   .store-manager-title {
     display: inline-block;
@@ -39,10 +48,17 @@
 
   .store-manager-actions-container {
     height: 35px;
-    position: relative;
     text-align: center;
-
-     
+  }
+  .bulk-container {  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+    .bulk-insert-progress {
+      position: relative;
+      
+    }
   }
 
   .store-manager-separator {
