button delete pinky theme

--- a/src/suggester/themes/pinky-theme.scss
+++ b/src/suggester/themes/pinky-theme.scss
@@ -80,7 +80,7 @@ $inputBorderSize: 2px;
         display: block;
         width: 22px;
         height: 22px;
-        background-color: salmon;
+        background-color: brown;
         border-radius: 50%;
         right: 7px;
         top: 12px;
@@ -90,7 +90,7 @@ $inputBorderSize: 2px;
         cursor: pointer;
 
         &:hover {
-          background-color: brown;
+          background-color: tomato;
         }
 
         &:focus {
