--- a/src/suggester/themes/pinky-theme.scss
+++ b/src/suggester/themes/pinky-theme.scss
@@ -82,7 +82,7 @@ $inputBorderSize: 2px;
         display: block;
         width: 22px;
         height: 22px;
-        background-color: Crimson;
+        background-color: MediumSeaGreen;
         border-radius: 50%;
         right: 7px;
         top: 12px;
@@ -92,7 +92,7 @@ $inputBorderSize: 2px;
         cursor: pointer;
 
         &:hover {
-          background-color: tomato;
+          background-color: LightSeaGreen;
         }
 
         &:focus {
