--- a/themes/css/default-theme.css
+++ b/themes/css/default-theme.css
@@ -2,24 +2,20 @@
 	position: relative;
 	text-align: left;
 	font-size: 14px;
-}
-
-.idb-suggester-container .idb-suggester .idb-suggester-panel-container {
+  }
+  .idb-suggester-container .idb-suggester .idb-suggester-panel-container {
 	position: absolute;
 	display: inline-block;
 	width: max-content;
 	margin-top: 2px;
-}
-
-.idb-suggester-container .idb-suggester .idb-suggester-panel-container.display {
+  }
+  .idb-suggester-container .idb-suggester .idb-suggester-panel-container.display {
 	z-index: 1;
-}
-
-.idb-suggester-container .idb-suggester .idb-suggester-panel-container.hide {
+  }
+  .idb-suggester-container .idb-suggester .idb-suggester-panel-container.hide {
 	z-index: 0;
-}
-
-.idb-suggester-container .idb-suggester .idb-suggester-panel-container .idb-suggester-panel {
+  }
+  .idb-suggester-container .idb-suggester .idb-suggester-panel-container .idb-suggester-panel {
 	margin: 0;
 	padding: 0;
 	list-style: none;
@@ -27,9 +23,8 @@
 	background-color: snow;
 	border-radius: 5px;
 	padding: 4px 6px;
-}
-
-.idb-suggester-container .idb-suggester .idb-suggester-input-container {
+  }
+  .idb-suggester-container .idb-suggester .idb-suggester-input-container {
 	position: relative;
 	background-color: ivory;
 	border-radius: 15px;
@@ -37,27 +32,27 @@
 	border: solid lightblue 2px;
 	width: calc(100% - 44px);
 	height: 30px;
-}
-
-.idb-suggester-container .idb-suggester .idb-suggester-input-container.focused {
+  }
+  .idb-suggester-container .idb-suggester .idb-suggester-input-container.focused {
 	border: solid royalblue 2px;
-}
-
-.idb-suggester-container .idb-suggester .idb-suggester-input-container .idb-suggester-input {
+  }
+  .idb-suggester-container .idb-suggester .idb-suggester-input-container .idb-suggester-input {
 	outline: none;
 	border: none;
 	height: calc(100% - 2px);
-	background-color: ivory;
+	background-color: transparent;
 	color: black;
 	width: 100%;
 	font-family: Verdana, Geneva, sans-serif;
 	font-size: 12px;
-}
-
-.idb-suggester-container .idb-suggester .idb-suggester-input-container .idb-suggester-input-layer {
+  }
+  .idb-suggester-container .idb-suggester .idb-suggester-input-container .idb-suggester-input.display {
+	color: transparent;
+  }
+  .idb-suggester-container .idb-suggester .idb-suggester-input-container .idb-suggester-input-layer {
 	position: absolute;
 	top: 0;
-	background-color: ivory;
+	background-color: transparent;
 	width: calc(100% - 32px);
 	padding-left: 2px;
 	padding-top: 8px;
@@ -68,9 +63,8 @@
 	white-space: nowrap;
 	font-family: Verdana, Geneva, sans-serif;
 	font-size: 12px;
-}
-
-.idb-suggester-container .idb-suggester .idb-suggester-input-container .idb-suggester-button-delete {
+  }
+  .idb-suggester-container .idb-suggester .idb-suggester-input-container .idb-suggester-button-delete {
 	position: absolute;
 	display: block;
 	width: 16px;
@@ -83,13 +77,12 @@
 	align-items: center;
 	justify-content: center;
 	cursor: pointer;
-}
-
-.idb-suggester-container .idb-suggester .idb-suggester-input-container .idb-suggester-button-delete:hover {
+  }
+  .idb-suggester-container .idb-suggester .idb-suggester-input-container .idb-suggester-button-delete:hover {
 	background-color: lightgrey;
-}
-
-.idb-suggester-container .idb-suggester .idb-suggester-input-container .idb-suggester-button-delete:focus {
+  }
+  .idb-suggester-container .idb-suggester .idb-suggester-input-container .idb-suggester-button-delete:focus {
 	outline: none;
 	box-shadow: 0em 0em 0.1em 0.1em goldenrod;
-}
+  }
+  
