--- a/themes/css/default-theme.css
+++ b/themes/css/default-theme.css
@@ -3,6 +3,15 @@
 	text-align: left;
 	font-size: 14px;
   }
+  .idb-suggester-container .idb-suggester {
+	border-radius: 15px;
+	border: solid lightblue 2px;
+	background-color: ivory;
+	height: 32px;
+  }
+  .idb-suggester-container .idb-suggester.focused {
+	border: solid royalblue 2px;
+  }
   .idb-suggester-container .idb-suggester .idb-suggester-panel-container {
 	position: absolute;
 	display: inline-block;
@@ -26,20 +35,15 @@
   }
   .idb-suggester-container .idb-suggester .idb-suggester-input-container {
 	position: relative;
-	background-color: ivory;
-	border-radius: 15px;
-	padding: 0 25px 0 15px;
-	border: solid lightblue 2px;
 	width: calc(100% - 44px);
-	height: 30px;
-  }
-  .idb-suggester-container .idb-suggester .idb-suggester-input-container.focused {
-	border: solid royalblue 2px;
+	padding-left: 15px;
   }
   .idb-suggester-container .idb-suggester .idb-suggester-input-container .idb-suggester-input {
 	outline: none;
 	border: none;
-	height: calc(100% - 2px);
+	border: 0;
+	padding: 0;
+	line-height: 32px;
 	background-color: transparent;
 	color: black;
 	width: 100%;
@@ -53,13 +57,10 @@
 	position: absolute;
 	top: 0;
 	background-color: transparent;
-	width: calc(100% - 32px);
-	padding-left: 2px;
-	padding-top: 8px;
-	height: calc(100% - 8px);
-	color: black;
+	width: calc(100% - 15px);
 	overflow-x: hidden;
-	overflow-y: hidden;
+	color: black;
+	line-height: 32px;
 	white-space: nowrap;
 	font-family: Verdana, Geneva, sans-serif;
 	font-size: 12px;
@@ -71,7 +72,7 @@
 	height: 17px;
 	background-color: slategrey;
 	border-radius: 50%;
-	right: 7px;
+	right: -19px;
 	top: 7px;
 	display: flex;
 	align-items: center;
@@ -81,8 +82,14 @@
   .idb-suggester-container .idb-suggester .idb-suggester-input-container .idb-suggester-button-delete:hover {
 	background-color: lightgrey;
   }
+  .idb-suggester-container .idb-suggester .idb-suggester-input-container .idb-suggester-button-delete:hover svg {
+	fill: slategrey;
+  }
   .idb-suggester-container .idb-suggester .idb-suggester-input-container .idb-suggester-button-delete:focus {
 	outline: none;
 	box-shadow: 0em 0em 0.1em 0.1em goldenrod;
+  }
+  .idb-suggester-container .idb-suggester .idb-suggester-input-container .idb-suggester-button-delete svg {
+	fill: lightgrey;
   }
   
